<resources>
    <string name="app_name">Cloud Counselage</string>
    <string name="app_logo">App Logo</string>
    <string name="hello_there_nwelcome_back">Hello There!\nWelcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_start_new_journey">Sign Up to start new Journey</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a member?</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chai">Masala Chai</string>
    <string name="productImage">ProductImage</string>
    <string name="niara_bbsr">Niara,BBSR</string>
    <string name="price">1200</string>
    <string name="price_strikeout"><strike>3200</strike></string>
    <string name="plus">\u002B</string>
    <string name="minus">\u2212</string>
    <string name="lorem"></string>

    <string name="webinars_amp_workshops"><![CDATA[Webinars & Workshops]]></string>
    <string name="see_all">See All</string>
    <string name="programming">Programming</string>
    <string name="get_started_with_python">Get Started with Python</string>
    <string name="programming_name">Programming Name</string>
    <string name="internships">Internships</string>
    <string name="netflix_icon">Netflix Icon</string>
    <string name="product_designer_ninternship">Product Designer\nInternship</string>
    <string name="netflix_san_francisco">Netflix.San Francisco</string>
    <string name="_2_months">2 Months</string>
    <string name="google_logo">Google Logo</string>
    <string name="backend_intern">Backend Intern</string>
    <string name="google_wfh">Google . WFH</string>
    <string name="_3_months">3 Months</string>
    <string name="soft_skills">Soft Skills</string>
    <string name="life_skill">Life Skill</string>
    <string name="communication">Communication</string>
    <string name="art_of_communication">Art of Communication</string>
    <string name="jobs">Jobs</string>
    <string name="search">Search</string>
    <string name="webinars">Webinars</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="category">
        <item>Webinars</item>
        <item>Soft Skills</item>
        <item>Jobs</item>
        <item>Internship</item>
        <item>Join Us</item>
    </string-array>
</resources>