<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:elevation="@dimen/_5sdp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="269dp"
        android:layout_height="132dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:elevation="@dimen/_5sdp"
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/python"
            android:contentDescription="@string/programming_name" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/art_of_communication"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_image"
            android:fontFamily="@font/poppins"
            android:text="@string/communication" />

        <TextView
            android:id="@+id/textView9"
            android:padding="5dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_image"
            android:fontFamily="@font/poppins"
            android:text="@string/life_skill" />

    </LinearLayout>

</LinearLayout>