<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPage">

    <EditText
        android:id="@+id/SearchBar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/search_box"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/Webinars"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/title_box"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/webinars"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/Internships"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/SearchBar"
        app:layout_constraintTop_toBottomOf="@+id/SearchBar" />

    <TextView
        android:id="@+id/Internships"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:background="@drawable/title_box_unselected"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/internships"
        app:layout_constraintBottom_toBottomOf="@+id/Webinars"
        app:layout_constraintEnd_toStartOf="@+id/SoftSkills"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Webinars"
        app:layout_constraintTop_toTopOf="@+id/Webinars" />

    <TextView
        android:id="@+id/SoftSkills"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:background="@drawable/title_box_unselected"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/soft_skills"
        app:layout_constraintBottom_toBottomOf="@+id/Internships"
        app:layout_constraintEnd_toStartOf="@+id/Jobs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Internships"
        app:layout_constraintTop_toTopOf="@+id/Internships" />

    <TextView
        android:id="@+id/Jobs"
        android:layout_width="58dp"
        android:layout_height="40dp"
        android:background="@drawable/title_box_unselected"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/jobs"
        app:layout_constraintBottom_toBottomOf="@+id/SoftSkills"
        app:layout_constraintEnd_toEndOf="@+id/SearchBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SoftSkills"
        app:layout_constraintTop_toTopOf="@+id/SoftSkills" />

    <FrameLayout
        android:id="@+id/FragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SearchBar"
        app:layout_constraintStart_toStartOf="@+id/SearchBar"
        app:layout_constraintTop_toBottomOf="@+id/Internships"/>

</androidx.constraintlayout.widget.ConstraintLayout>