<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.HomeScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            android:id="@+id/appBarLayout"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/Blue">

                <TextView
                    android:id="@+id/AppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cloud Counselage"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp">

                </TextView>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/webinars_amp_workshops"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:onClick="gotooppotunitieswebinar"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/WebinarList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/internships"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/WebinarList"
            app:layout_constraintTop_toBottomOf="@+id/WebinarList" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:onClick="gotooppotunitiesInternship"
            app:layout_constraintEnd_toEndOf="@+id/WebinarList"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/InternshipList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/soft_skills"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/InternshipList"
            app:layout_constraintTop_toBottomOf="@+id/InternshipList" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:onClick="gotooppotunitiessoft"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/InternshipList"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SoftSkillList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:text="@string/jobs"
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@id/SoftSkillList"
            app:layout_constraintStart_toStartOf="@id/SoftSkillList"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:onClick="gotooppotunitiesJob"
            app:layout_constraintTop_toTopOf="@id/textView13"
            app:layout_constraintEnd_toEndOf="@id/SoftSkillList"
            app:layout_constraintTop_toBottomOf="@id/textView13"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/JobsList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/textView14"
            app:layout_constraintStart_toStartOf="@id/textView13"
            app:layout_constraintTop_toBottomOf="@id/textView13"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>